--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     <script>
         // 全局变量
         let model = null;
-        const MODEL_PATH = 'model/model.json'; // 模型路径
+        const MODEL_PATH = 'tfjs_model/model.json'; // 模型路径
         
         // DOM元素
         const modelStatus = document.getElementById('model-status');
@@ -625,7 +625,7 @@
                 modelStatus.innerHTML = '<i class="fas fa-spinner fa-spin"></i> 正在加载神经网络模型 (30MB)...';
                 
                 // 加载TensorFlow.js模型
-                model = await tf.loadGraphModel('./tfjs_model/model.json', {
+                model = await tf.loadGraphModel('/tfjs_model/model.json', {
                     onProgress: (fractions) => {
                         const percent = Math.floor(fractions * 100);
                         modelProgress.style.width = `${percent}%`;
