--- a/index.html
+++ b/index.html
@@ -687,12 +687,12 @@
             return [
                 parseFloat(document.getElementById('smys').value) || 0,
                 parseFloat(document.getElementById('smts').value) || 0,
-                parseFloat(document.getElementById('thickness').value) || 0,
                 parseFloat(document.getElementById('dia').value) || 0,
-                parseFloat(document.getElementById('d_grow').value) || 0,
                 parseFloat(document.getElementById('depth').value) || 0,
+                parseFloat(document.getElementById('d_grow').value) || 0,
                 parseFloat(document.getElementById('length').value) || 0,
-                parseFloat(document.getElementById('prestress').value) || 0
+                parseFloat(document.getElementById('prestress').value) || 0,
+                parseFloat(document.getElementById('thickness').value) || 0
             ];
         }
         
